# agent-policy-gateway

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SETUP.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  semgrep.yml
docs/: benchmarks.md  daily-runbook.md  design.md  index.md  quickstart.md  release.md  threat-model.md
docs/work-log/: 2026-04-28-r2.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-09.md  2026-05-12.md  2026-05-13.md  2026-05-15.md  2026-05-16.md  2026-05-17.md  2026-05-21.md  2026-05-23.md  2026-05-24-r18.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-05.md  2026-06-07-r28.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-11.md  2026-06-13.md  2026-06-14.md  2026-06-17.md  2026-06-18-r38.md  2026-06-18.md  2026-06-20.md  (+1 more)
examples/: __init__.py
examples/indirect_injection/: README.md  __init__.py  __main__.py  agent.py  gated.py  injected_page.py  naive.py  tools.py
policies/: default.yaml  redact-pii.yaml  research-agent.yaml  strict-pii.yaml
src/agent_policy_gateway/: __init__.py  anthropic_adapter.py  audit.py  bench.py  cli.py  core.py  gateway.py  langchain_adapter.py  mcp_adapter.py  mcp_async_adapter.py  openai_adapter.py  policy.py  ratelimit.py  reload.py  taint.py
tests/: test_anthropic_adapter.py  test_audit.py  test_audit_stats.py  test_bench.py  test_cli.py  test_core.py  test_docs_site.py  test_example_indirect_injection.py  test_gateway.py  test_gateway_async.py  test_langchain_adapter.py  test_mcp_adapter.py  test_mcp_adapter_async.py  test_openai_adapter.py  test_policy.py  test_provenance.py  test_publish_workflow.py  test_py_typed.py  test_ratelimit.py  test_release_runbook.py  test_reload.py  test_smoke.py  test_taint.py  test_threat_model.py
