[project]
name = "agent-policy-gateway"
version = "0.1.0"
description = "Policy enforcement and taint tracking for AI agent tool calls."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Hung Mo Howard Hsieh" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
apg = "agent_policy_gateway.cli:main"
apg-replay = "agent_policy_gateway.audit:replay_main"
apg-bench = "agent_policy_gateway.bench:bench_main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_policy_gateway = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
# R23: typed-API regression guard. Baseline is deliberately permissive so the
# current tree passes clean today; tighten incrementally in later milestones.
python_version = "3.10"
warn_unused_ignores = true
files = ["src/agent_policy_gateway"]

# PyYAML ships no type stubs in the dev extra; don't fail the typed-API guard
# on a third-party import that is out of our control.
[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
